--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,5 +1,8 @@
 .navbar {
   display: flex;
+  z-index: 1000;
+  font-family: var(--font-heading);
+  position:relative;
   justify-content: space-between;
   align-items: center;
   padding: 24px 8%;
@@ -8,14 +11,31 @@
 }
 
 .logo {
-  font-size: 1.5rem;
-  color: var(--color-primary-900);
+    display: flex;
+    align-items: center;
+    gap: 12px;
+
+    text-decoration: none;
+    color: var(--color-primary-900);
+
+    font-size: 1.5rem;
+    font-family: var(--font-heading);
+    font-weight: 700;
+}
+
+.logo img {
+    width: 40px;
+    height: 40px;
+
+    object-fit: contain;
+    border-radius: 10%
 }
 
 .nav-links {
   display: flex;
   list-style: none;
   gap: 24px;
+  margin-right: left;
 }
 
 .nav-links li {
@@ -26,10 +46,17 @@
   text-decoration: none;
   color: var(--color-primary-900);
   font-weight: 600;
+  font-family: var(--font-heading);
+  font-size: small;
+  ;
 }
 
 .nav-links a:hover {
   color: var(--color-primary-600);
+}
+
+.dropdown {
+  position: relative;
 }
 
 .dropdown-menu {
@@ -37,6 +64,7 @@
   position: absolute;
   top: 100%;
   left: 0;
+  z-index: 9999;
 
   min-width: 180px;
   padding: 12px 0;
